2004-12-01  Alexandre Oliva  <aoliva@redhat.com>

	* calls.c (initialize_argument_information): Treat NOP_EXPR
	of TARGET_EXPR the same as TARGET_EXPR itself.

2002-08-14  Gabriel Dos Reis  <gdr@nerim.net>

	Fix PR/7566
	* c-semantics.c (genrtl_case_label): Don't (mis)use
	warning_with_decl.

2004-07-25  David Edelsohn  <edelsohn@gnu.org>

	PR target/16239
	* config/rs6000/rs6000.md (movdi_internal64): Further disparage
	f->f.

2002-11-06  David Edelsohn  <edelsohn@gnu.org>

	PR target/8480, optimization/8328
	* config/rs6000/rs6000.md (movdi_internal64): Discourage
	FPR to FPR moves.

2004-02-26  Alan Modra  <amodra@bigpond.net.au>

	PR rtl-optimization/14279
	* gcse.c (delete_null_pointer_checks_1): Do not delete CC setter
	unless HAVE_cc0.

2004-10-26  Jakub Jelinek  <jakub@redhat.com>

	* config/rs6000/linux64.h (SUBSUBTARGET_OVERRIDE_OPTIONS): Disallow
	-m32 -mpowerpc64 and -m64 -mno-powerpc64.

2004-03-30  Hartmut Penner  <hpenner@de.ibm.com>

	PR 11591
	* config/rs6000/rs6000.c (rs6000_legitimate_address):
	Allow any offset to argument pointer in no-strict case.

2002-09-26  Ulrich Weigand  <uweigand@de.ibm.com>

	* reload.c (dup_replacements): New function.
	(find_reloads): Use it to duplicate replacements at the top level
	of match_dup operands.

2002-04-26  Richard Henderson  <rth@redhat.com>

	PR c/3581
	* c-common.c (fix_string_type): Split out of ...
	(combine_strings): ... here.  Take a varray, not a tree list.
	(c_expand_builtin_printf): Use fix_string_type.
	* c-common.h: Update decls.
	* c-parse.in (string): Remove.  Update all uses to use STRING
	instead, and not call combine_strings.
	(yylexstring): New.
	(_yylex): Use it.
	* c-typeck.c (simple_asm_stmt): Don't call combine_strings.
	(build_asm_stmt): Likewise.
	* objc/objc-act.c (my_build_string): Use fix_string_type.
	(build_objc_string_object): Build varray for combine_strings.

2004-08-14  Jakub Jelinek  <jakub@redhat.com>

	* fold-const.c (fold): If flag_syntax_only, don't depend on